[package]
name = "spaceship_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
rand = "0.8.5"

#Enables optimizations when in developer mode
[profile.dev]
opt-level = 1

#High optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3
